--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
+@font-face {
+  font-family: 'Montserratrat', sans-serif;
+  src: url('https://fonts.google.com/specimen/Montserrat')
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family:"Comic Sans MS", 'Montserratrat',-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -8,6 +13,6 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family:'Montserratrat', source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
