--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,12 +1,18 @@
-button {
-  background: none;
-	color: black;
+button{
+  	color: #131313;
 	border: none;
 	padding: 0;
 	font: inherit;
-	cursor: pointer;
 	outline: inherit;
-  width: 200px;
-  height: 42px;
-  background: #D58C51;
+	width: 200px;
+	height: 42px;
+	background: #D58C51;
+}
+
+button:focus{
+	opacity: 0.8;
+}
+
+button:hover{
+	opacity: 0.9;
 }
