--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,19 @@
 @font-face {
-  font-family: 'Montserratrat', sans-serif;
-  src: url('https://fonts.google.com/specimen/Montserrat')
+  font-family: 'Montserrat', sans-serif;
+  src: url('https://fonts.google.com/specimen/Montserrat');
 }
 
 body {
   margin: 0;
-  font-family:"Comic Sans MS", 'Montserratrat',-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family:'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+   background: #161516;
+;
 }
 
 code {
-  font-family:'Montserratrat', source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family:Montserrat, source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
