--- a/src/pages/CardsPage/CardsPage.css
+++ b/src/pages/CardsPage/CardsPage.css
@@ -1,25 +1,63 @@
 .cards-container {
-  width: 100%;
-  /* height: 100vh; */
-  background-color: #180D01;
-  color: white;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-wrap: wrap;
-  flex-direction: column;
+  max-width: 1440px;
+  margin: 0 auto;
+  background-color: #161516;
 }
+
 .header {
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+
 }
 .cards-list {
-  width: 100%;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
   flex-wrap: wrap;
-  padding: 30px 0;
+  justify-content: center;
+
+}
+
+.title__header{
+  font-style: normal;
+  font-weight: bold;
+  font-size: 31px;
+  text-transform: uppercase;
+  color: #FFFFFF ;
+  padding-left: 70px;
+
+}
+
+.wrapper__header{
+  display: flex;
+  justify-content: space-between;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 25px;
+  padding: 51px 75px 80px 0;
+  text-align: right;
+  color: #FFFFFF ;
+}
+.wrapper__bas {
+    display: flex;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 25px;
+
+  text-align: right;
+  color: #FFFFFF ;
+}
+.wrapper__bas a{
+
+}
+
+.wrapper__bas:after{
+  content: '';
+  display: block;
+  background: url("../../images/Group 71.svg") 0 0 no-repeat;
+  width: 50px;
+  height: 50px;
+  margin-left: 20px;
 }
